# todokiosk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json  mkrelease
.cargo/: config.toml
src/: build.rs  common.scss  lib.rs  main.rs
static/: common.css
templates/: footer.html  header.html  main.html
