[package]
name = "todokiosk"
version = "1.3.1"
license = "MIT"
edition = "2021"
build = "src/build.rs"
description = "Web application for displaying To-Do items from a CalDAV server"
authors = ["CTCL"]

[build-dependencies]
grass = "0.13.2"
grass_compiler = "0.13.2"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
minicaldav = "0.8.0"
url = "=2.5.0"
ureq = "=2.9.6"
chrono = "0.4.35"