[package]
name = "todokiosk"
version = "0.3.1"
license = "MIT"
edition = "2021"
description = "Web application for displaying To-Do items from a CalDAV server"
authors = ["CTCL"]

[dependencies]
actix-files = "0.6.5"
actix-web = "4.5.1"
chrono = "0.4.35"
env_logger = "0.11.3"
minicaldav = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tera = "1.19.1"
ureq = "=2.9.6"
url = "=2.5.0"